--- a/package.json
+++ b/package.json
@@ -10,13 +10,25 @@
   },
   "dependencies": {
     "@anthropic-ai/claude-code": "^1.0.72",
+    "@anthropic-ai/sdk": "^0.59.0",
+    "@supabase/supabase-js": "^2.54.0",
+    "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.0",
+    "csv-parser": "^3.2.0",
+    "daisyui": "^5.0.50",
+    "multer": "^2.0.2",
     "next": "15.4.6",
+    "openai": "^5.12.2",
+    "pdf-parse": "^1.1.1",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/multer": "^2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
