--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/claude-code": "^1.0.72",
-    "@anthropic-ai/sdk": "^0.59.0",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.54.0",
     "autoprefixer": "^10.4.21",
     "chart.js": "^4.5.0",
@@ -18,7 +18,6 @@
     "daisyui": "^5.0.50",
     "multer": "^2.0.2",
     "next": "15.4.6",
-    "openai": "^5.12.2",
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.6",
     "react": "19.1.0",
@@ -30,6 +29,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/multer": "^2",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
